# COS_332_Pracs

Prac2/: main.cpp
prac_1/: Cargo.toml  makefile  prac_1.tar
prac_1/src/: style.css
prac_2/: Cargo.toml  Rich.txt
prac_2/src/: client_handler_struct.rs  error_enum.rs  helpers.rs  io_enum.rs  main.rs  user_struct.rs
prac_3/: Cargo.toml
prac_3/src/: api.rs  main.rs  prac_three
prac_3/static/: style.css
prac_3/static/error_code/: 404.html
prac_3/static/pages/: index.html  other.html
prac_4/: Cargo.toml  dump.rdb
prac_4/src/: file.rs  handlers.rs  headers.rs  main.rs  methods.rs  user.rs
prac_4/static/: script.js  style.css
prac_4/static/error_code/: 404.html
prac_4/static/pages/: appointments.html  login.html  signup.html
prac_5/: Cargo.toml  hi.txt
prac_5/src/: bind.rs  delete.rs  main.rs  search.rs
prac_6/: Cargo.toml
prac_6/src/: dates.txt  friend.rs  main.rs
prac_7/: Cargo.toml
prac_7/src/: main.rs
prac_one/: makefile
prac_one/cgi-bin/: prac_one
prac_one/src/: main.rs  style.css
prac_three/: Cargo.toml
prac_two/: Cargo.toml
prac_two/src/: main.rs
