[package]
name = "prac_three"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
regex = "1.7.3"
reqwest = {version="0.11.15", features = ["blocking"] }
serde = "1.0.158"
serde_json = "1.0.94"
tera = "1.18.1"
