[package]
name = "prac_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
redis = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tera = "1.18.1"
url = "2.3.1"
uuid =  { version = "1.3.0", features = ["v4"] }
